# vtils

./: .gitignore  CMakeLists.txt  README.md  devenv.nix
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst
include/vtils/: alignment.hpp  assert.hpp  macros.hpp  scope_guard.hpp
include/vtils/impl/: debug.hpp
include/vtils/macros/: arch.hpp  attr.hpp  compiler.hpp  features.hpp  misc.hpp  platform.hpp
include/vtils/os/: condvar.hpp  memory_mapped.hpp  mutex.hpp  read_write_lock.hpp
include/vtils/os/impl/: condvar.os.windows.hpp  condvar.pthread.hpp  memory_mapped.os.windows.hpp  memory_mapped.unix.hpp  mutex.os.windows.hpp  mutex.pthread.hpp  read_write_lock.os.windows.hpp  read_write_lock.pthread.hpp  util_pointer_value.hpp
source/: assert.cpp
source/os/impl/: memory_mapped.os.windows.cpp  memory_mapped.unix.cpp
test/: CMakeLists.txt
